--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,14 +27,14 @@ services:
   #   environment:
   #     DATABASE_URL: postgres://wardrobe:password@database:5432/wardrobe
   #     WAIT_HOSTS: database:5432
-  #     WAIT_TIMEOUT: 240
-  # database:
-  #   image: postgres:14.5-bullseye
-  #   volumes:
-  #     - postgres-data:/var/lib/postgresql/data
-  #   environment:
-  #     POSTGRES_PASSWORD: snowstat_sadmin
-  #     POSTGRES_USER: snowstats_admin
-  #     POSTGRES_DB: snowstats_db
-  #   ports:
-  #     - 15432:5432
+      # WAIT_TIMEOUT: 240
+  database:
+    image: postgres:14.5-bullseye
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: snowstat_sadmin
+      POSTGRES_USER: snowstats_admin
+      POSTGRES_DB: snowstats_db
+    ports:
+      - 15432:5432
