--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-image-pan-zoom-rotate": "^1.6.0",
-    "react-img-mapper": "^1.5.1"
+    "react-img-mapper": "^1.5.1",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
