--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.2
 decorator==5.1.1
 dill==0.3.6
 Django==4.0.3
+django-extensions==3.2.3
 django-cors-headers==4.2.0
 django-spa==0.3.6
 docutils==0.19
@@ -30,6 +31,7 @@ prompt-toolkit==3.0.38
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.8.0
+psycopg2==2.9.9
 pyflakes==2.4.0
 Pygments==2.15.1
 pylint==2.17.3
