--- a/backend/.ebextensions/01_packages.config
+++ b/backend/.ebextensions/01_packages.config
@@ -2,10 +2,6 @@ packages:
   yum:
     git: []
     libjpeg-turbo-devel: []
-    amazon-linux-extras: []
 
 commands:
-    01_postgres_activate:
-        command: sudo amazon-linux-extras enable postgresql10
-    02_postgres_install:
-        command: sudo yum install -y postgresql-devel
+    sudo amazon-linux-extras install postgresql10
