--- a/backend/.ebextensions/01_packages.config
+++ b/backend/.ebextensions/01_packages.config
@@ -4,4 +4,4 @@ packages:
     libjpeg-turbo-devel: []
 
 commands:
-    sudo amazon-linux-extras install postgresql10
+    sudo dnf install postgresql15
