--- a/backend/.ebextensions/01_packages.config
+++ b/backend/.ebextensions/01_packages.config
@@ -4,4 +4,5 @@ packages:
     libjpeg-turbo-devel: []
 
 commands:
-    sudo dnf install postgresql15
+    01_postgres_activate:
+        command: sudo dnf install postgresql15
