--- a/backend/.ebextensions/01_packages.config
+++ b/backend/.ebextensions/01_packages.config
@@ -2,3 +2,7 @@ packages:
   yum:
     git: []
     libjpeg-turbo-devel: []
+
+commands:
+    01_postgres_client:
+        command: sudo yum install postgresql15
