--- a/backend/.ebextensions/01_packages.config
+++ b/backend/.ebextensions/01_packages.config
@@ -2,7 +2,4 @@ packages:
   yum:
     git: []
     libjpeg-turbo-devel: []
-
-commands:
-    01_postgres_client:
-        command: sudo yum install postgresql15
+    postgresql15: []
