--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,7 +31,7 @@ prompt-toolkit==3.0.38
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycodestyle==2.8.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pyflakes==2.4.0
 Pygments==2.15.1
 pylint==2.17.3
