--- a/backend/.ebextensions/02_python.config
+++ b/backend/.ebextensions/02_python.config
@@ -1,10 +1,3 @@
 option_settings:
-    "aws:elasticbeanstalk:application:environment":
-        DJANGO_SETTINGS_MODULE: "backend.settings"
-        "PYTHONPATH": "/opt/python/current/app/backend:$PYTHONPATH"
-    "aws:elasticbeanstalk:container:python":
-        WSGIPath: backend/wsgi.py
-        NumProcesses: 3
-        NumThreads: 20
-    "aws:elasticbeanstalk:container:python:staticfiles":
-        "/static/": "www/static/"
+  aws:elasticbeanstalk:container:python:
+    WSGIPath: ebdjango.wsgi:application
