--- a/backend/.ebextensions/02_python.config
+++ b/backend/.ebextensions/02_python.config
@@ -4,5 +4,5 @@ option_settings:
     "PYTHONPATH": "./backend"
   aws:elasticbeanstalk:container:python:
     WSGIPath: backend.wsgi:application
-  aws:elasticbeanstalk:environment:proxy:staticfiles:
-    /static: static
+  "aws:elasticbeanstalk:container:python:staticfiles":
+    "/static/": "www/static/"
