--- a/backend/.ebextensions/02_python.config
+++ b/backend/.ebextensions/02_python.config
@@ -6,3 +6,10 @@ option_settings:
     WSGIPath: backend.wsgi:application
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
+
+container_commands:
+  01_migration:
+      command: "source /var/app/venv/*/bin/activate && python manage.py makemigrations"
+  02_migrate:
+      command: "source /var/app/venv/*/bin/activate && python manage.py migrate --noinput"
+      leader_only: true
