--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     ports:
       - "3000:3000"
     environment:
+      PUBLIC_URL: http://localhost:3000
+      VITE_DJANGO_API: http://localhost:8000
       HOST_OS: ${OS}
       NODE_ENV: development
       HOST: "0.0.0.0"
