--- a/frontend_react/.env.production
+++ b/frontend_react/.env.production
@@ -1,2 +1,2 @@
 # .env.production
-VITE_DJANGO_API=http://snowstats-backend.us-west-2.elasticbeanstalk.com
+VITE_DJANGO_API=snowstats-backend.us-west-2.elasticbeanstalk.com
