--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,8 @@ Django==4.0.3
 django-extensions==3.2.3
 django-cors-headers==4.2.0
 django-spa==0.3.6
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 docutils==0.19
 executing==1.2.0
 flake8==4.0.1
