--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 appnope==0.1.3
-asgiref==3.5.0
+asgiref>=3.6.0
 astroid==2.15.4
 asttokens==2.2.1
 backcall==0.2.0
@@ -7,7 +7,7 @@ black==22.3.0
 click==8.1.2
 decorator==5.1.1
 dill==0.3.6
-Django==4.0.3
+Django>=4.1.10
 django-extensions==3.2.3
 django-cors-headers==4.2.0
 django-spa==0.3.6
@@ -40,7 +40,7 @@ pylint==2.17.3
 pyserial==3.5
 Send2Trash==1.8.2
 six==1.16.0
-sqlparse==0.4.2
+sqlparse>=0.4.4
 stack-data==0.6.2
 thonny==4.0.2
 tomli==2.0.1
