--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-img-mapper": "^1.5.1",
+    "react-img-mapper": "github:img-mapper/react-img-mapper",
     "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
